Added loader and data table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="container-fluid">
-  <marquee behavior="" direction="left" class="text-primary">Welcome to Demo Web Application... </marquee>
+  <marquee behavior="" direction="left" class="text-danger mb-2">
+    <h4> <b>Welcome to Demo Web Application... </b> </h4>
+  </marquee>
+
   <router-outlet></router-outlet>
 </div>
+
+<ngx-ui-loader></ngx-ui-loader>
